--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,10 @@
-pyrofork==2.3.45
+pyrofork>=2.3.68
 tgcrypto-pyrofork
 pymongo==4.13.2
 motor==3.7.1
 marshmallow<4.0.0
 umongo
 requests
-bs4
 shortzy
 datetime
 pytz
